adicionar valores transferidos no corpo do email
