# public/docs/swagger.yaml
@@ -170,6 +170,24 @@ paths:
                     example: "Bearer"
         '401':
           description: Credenciais inválidas.
+  /logout:
+    post:
+      summary: Deslogar usuario autenticado
+      description: Endpoint deslogar usuario autenticado.
+      responses:
+        '200':
+          description: Logged out successfully.
+          content:
+            application/json:
+              schema:
+                type: object
+                properties:
+                  message::
+                    type: string
+                    example: "Logged out successfully"
+        '401':
+          description: Not authenticated. Invalid or missing token..
+
   /users:
     get:
       summary: Lista usuários cadastrados
@@ -186,7 +204,7 @@ paths:
                 properties:
                   message:
                     type: string
-                    example: "Sucesso!"
+                    example: "Success!"
                   data:
                     type: array
                     items:
@@ -221,43 +239,44 @@ paths:
                         balance: 985.50
                         id: "2"
         '422':
-          description: Erro de validação.
+          description: Validation error.
     post:
       summary: Criação de um novo usuário
       description: Endpoint para criar um novo usuário no sistema.
       security:
         - bearerAuth: []
       requestBody:
-        required: true
         content:
           application/json:
             schema:
               type: object
+              required:
+                - full_name
+                - email
+                - document
+                - password
+                - balance
               properties:
-                  data:
-                    type: array
-                  full_name:
+                full_name:
                     type: string
                     example: "João Silva"
-                  email:
-                    type: string
-                    example: "joao.silva@example.com"
-                  document:
-                    type: string
-                    example: "99422401011"
-                  type:
-                    type: string
-                    enum: [common, shopkeeper]
-                    example: "common"
-                  balance:
-                    type: number
-                    format: float
-                    example: 1000.00
-                  id:
-                    type: string
+                email:
+                  type: string
+                  example: "joao.silva@example.com"
+                document:
+                  type: string
+                  example: "99422401011"
+                password:
+                  type: string
+                balance:
+                  type: number
+                  format: float
+                  example: 1000.00
+
+
       responses:
         '201':
-          description: Usuário criado com sucesso.
+          description: User created successfully.
           content:
             application/json:
               schema:
@@ -265,14 +284,34 @@ paths:
                 properties:
                   message:
                     type: string
-                    example: "Usuário criado com sucesso!"
+                    example: "User created successfully!"
                   data:
                     type: object
+                    properties:
+                      full_name:
+                        type: string
+                        example: "João Silva"
+                      email:
+                        type: string
+                        example: "joao.silva@example.com"
+                      document:
+                        type: string
+                        example: "99422401011"
+                      type:
+                        type: string
+                        enum: [common, shopkeeper]
+                        example: "common"
+                      balance:
+                        type: number
+                        format: float
+                        example: 1000.00
+                      id:
+                        type: string
         '422':
-          description: Erro de validação.
+          description: Validation error.
     patch:
       summary: Atualizar saldo de usuário
-      description: Endpoint para atualizar o saldo do usuario tipo common. Esse valor deve ser positivo e será incrementado ao saldo que já existir.
+      description: Endpoint para atualizar o saldo do usuario logado tipo common. Esse valor deve ser positivo e será incrementado ao saldo que já existir.
       security:
         - bearerAuth: []
       requestBody:
@@ -288,7 +327,7 @@ paths:
                   example: 1000.00
       responses:
         '200':
-          description: Usuário criado com sucesso.
+          description: User created successfully.
           content:
             application/json:
               schema:
@@ -296,13 +335,13 @@ paths:
                 properties:
                   message:
                     type: string
-                    example: "Saldo atualizado com sucesso!!"
+                    example: "Balance updated successfully!"
                   balance::
                     type: number
                     format: float
                     example: 1000.00
         '422':
-          description: Erro de validação.
+          description: Validation error.
   /transfer:
     post:
       summary: Transferência de valores
@@ -338,7 +377,7 @@ paths:
                   example: 2
       responses:
         '200':
-          description: Transferência realizada com sucesso.
+          description: Transfer completed successfully.
           content:
             application/json:
               schema:
@@ -346,9 +385,9 @@ paths:
                 properties:
                   message:
                     type: string
-                    example: "Transferência realizada com sucesso."
+                    example: "Transfer completed successfully."
         '422':
-          description: Erro de validação ou saldo insuficiente.
+          description: Validation error ou saldo insuficiente.
           content:
             application/json:
               schema:
@@ -356,4 +395,4 @@ paths:
                 properties:
                   error:
                     type: string
-                    example: "Saldo insuficiente."
+                    example: "Insufficient balance."
